src/tests/functionality/assignment_3_io_arrays_comments/valid/02_mandatory_comments_around_statements.c
// mandatory: line comments around code
int main() {
    int a = 3; // comment after declaration
    /* comment between instructions */
    int b = a + 4;
    return b; // final comment
}
