src/tests/functionality/assignment_3_io_arrays_comments/invalid_semantic/02_mandatory_array_index_must_be_int_pointer_index.c
int main() {
    int values[3] = {1, 2, 3};
    int *p;
    return values[p];
}
